--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -50,3 +50,42 @@ padding: 10px;
   width: 62px;
   height: 62px;
 }
+
+/*PHOTO  MODAL */
+
+
+.modal-dialog {
+width: 90% !important;
+
+
+
+}
+
+.modal-body {
+overflow: auto;
+height: 500px !important;
+min-height: 300px !important;
+}
+
+.modal_thumbnails {
+
+    width: 150px;
+    height: 100px !important;
+}
+
+#set_user_image {
+
+margin:10px;
+
+}
+
+
+#modal_sidebar {
+
+position: fixed !important;
+
+}
+/* Login page */
+#login-id label{
+  color:#fff;
+}
